--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -1,1 +1,62 @@
-<h1>Index de chat room</h1>
+<h4 class="ui center aligned medium icon header">
+  <i class="circular orange coffee icon"></i>
+  Di algo
+</h4>
+
+<div class="ui two column grid">
+  <div class="twelve wide column">
+    <div class="ui fluid raised card chatbox">
+      <div class="content">
+        <div class="ui small feed">
+          <h4 class="ui header">Actividad de seguidores</h4>
+          <div class="event">
+            <div class="content">
+              <div class="summary">
+                 <a>Elliot Fu</a> added <a>Jenny Hess</a> as a friend
+              </div>
+            </div>
+          </div>
+          <div class="event">
+            <div class="content">
+              <div class="summary">
+                 <a>Stevie Feliciano</a> added <a>Elliot Fu</a> as a friend
+              </div>
+            </div>
+          </div>
+          <div class="event">
+            <div class="content">
+              <div class="summary">
+                 <a>Helen Troy</a> added <a>Christian Rocha</a> as a friend
+              </div>
+            </div>
+          </div>
+          <div class="event">
+            <div class="content">
+              <div class="summary">
+                 <a>Christian Rocha</a> signed up for the  site.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="four wide column">
+    <div class="ui fluid raised card chatbox">
+      <div class="content">
+        <div class="ui inverted vertical menu">
+          <a class="active item">
+            Inicio
+          </a>
+          <a class="item">
+            Mensajes
+          </a>
+          <a class="item">
+            Amigos
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
