Pagina de inicio

--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -7,7 +7,7 @@
   <div class="twelve wide column">
     <div class="ui fluid raised card chatbox">
       <div class="content">
-        <div class="ui small feed">
+        <div class="ui feed">
           <h4 class="ui header">Actividad de seguidores</h4>
           <div class="event">
             <div class="content">
@@ -39,6 +39,17 @@
           </div>
         </div>
       </div>
+        <%-#Controla en ingreso de mensajes -%>
+        <div class="extra content">
+            <form class="ui reply form">
+            <div class="field">
+                <div class="ui fluid icon input">
+                <input type="text" placeholder="Ingrese un mensaje ...">
+                <i class="bordered inverted orange edit icon"></i>
+                </div>
+            </div>
+            </form>
+        </div>
     </div>
   </div>
 
