Action cable y partial de mnesajes

--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -13,18 +13,18 @@
       </div>
         <%-#Controla en ingreso de mensajes -%>
         <div class="extra content">
-            <form class="ui reply form">
-            <div class="field">
+          <%= form_for(@message, html: {class: "ui reply form", role: "form"}, url: message_path, remote: true) do |f| %>
+            <div class="ui feed" id="message-container">
                 <div class="ui fluid icon input">
-                <input type="text" placeholder="Ingrese un mensaje ...">
-                <i class="bordered inverted orange edit icon"></i>
+                  <%= f.text_field :body %>
+                  <%= f.button '<i class="bordered inverted orange edit icon"></i>'.html_safe %>
                 </div>
             </div>
-            </form>
+          <% end %>  
         </div>
     </div>
   </div>
-
+  <%-#Controla el menu lateral -%>
   <div class="four wide column">
     <div class="ui fluid raised card chatbox">
       <div class="content">
