--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -27,7 +27,7 @@
   <%-#Controla el menu lateral -%>
   <div class="four wide column">
     <div class="ui fluid raised card chatbox">
-      <div class="content">
+      <div class="content" id="messages">
         <div class="ui inverted vertical menu">
           <a class="active item">
             Inicio
